// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheetLabel /> renders BottomSheetLabel correctly 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c0 {
  text-transform: uppercase;
}

<div
  className="text text--dark text--primary c0 c1"
  disabled={false}
  size="hecto"
>
   
  Custom label
</div>
`;

exports[`<BottomSheetLabel /> renders BottomSheetLabel with prop variant to equal \`alert\` 1`] = `
.c0 {
  padding: 4px 8px;
  font-weight: 600;
  text-align: center;
  color: rgba(255,255,255,1);
  font-size: 10px;
  line-height: 1.2;
  border-radius: 2px;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  background-color: #d93a3a;
}

<div
  className="badge c0"
  color="#d93a3a"
>
  Alert label
</div>
`;

exports[`<BottomSheetLabel /> renders BottomSheetLabel with prop variant to equal \`positive\` 1`] = `
.c0 {
  padding: 4px 8px;
  font-weight: 600;
  text-align: center;
  color: rgba(255,255,255,1);
  font-size: 10px;
  line-height: 1.2;
  border-radius: 2px;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  background-color: #1bab1e;
}

<div
  className="badge c0"
  color="#1bab1e"
>
  Positive label
</div>
`;
